Bug 1917859 - Extend addonsManager manage event to include the addon blocklistState. r=willdurand
Depends on D223844

Differential Revision: https://phabricator.services.mozilla.com/D224982

UltraBlame original commit: 8f9c508c826d23ea23343460282c84c684527548

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -2019,6 +2019,38 @@ the
 extension
 permission
 doorhanger
+blocklist_state
+:
+>
+The
+add
+-
+on
+blocklistState
+(
+0
+not
+-
+blocked
+1
+soft
+-
+blocked
+2
+hard
+-
+blocked
+)
+at
+the
+time
+the
+manage
+event
+was
+being
+collected
+.
 notification_emails
 :
 [
@@ -2075,6 +2107,7 @@ bug_numbers
 1817100
 1861295
 1912166
+1917859
 ]
 release_channel_collection
 :
