--- a/toolkit/mozapps/extensions/metrics.yaml
+++ b/toolkit/mozapps/extensions/metrics.yaml
@@ -1408,6 +1408,18 @@ mozilla
 org
 /
 1912166
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1917859
 data_reviews
 :
 -
@@ -1450,6 +1462,20 @@ id
 1820153
 #
 c3
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D224982
 data_sensitivity
 :
 -
@@ -1621,6 +1647,43 @@ doorhanger
 type
 :
 quantity
+blocklist_state
+:
+description
+:
+|
+The
+add
+-
+on
+blocklistState
+(
+0
+not
+-
+blocked
+1
+soft
+-
+blocked
+2
+hard
+-
+blocked
+)
+at
+the
+time
+the
+manage
+event
+was
+being
+collected
+.
+type
+:
+string
 expires
 :
 140
