--- a/toolkit/mozapps/extensions/metrics_legacy.yaml
+++ b/toolkit/mozapps/extensions/metrics_legacy.yaml
@@ -3608,6 +3608,16 @@ bugzil
 la
 /
 1912166
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1917859
 data_reviews
 :
 &
@@ -3742,6 +3752,16 @@ bugzil
 la
 /
 1912166
+-
+https
+:
+/
+/
+bugzil
+.
+la
+/
+1917859
 notification_emails
 :
 &
@@ -3895,6 +3915,43 @@ the
 extension
 permission
 doorhanger
+type
+:
+string
+blocklist_state
+:
+description
+:
+|
+The
+add
+-
+on
+blocklistState
+(
+0
+not
+-
+blocked
+1
+soft
+-
+blocked
+2
+hard
+-
+blocked
+)
+at
+the
+time
+the
+manage
+event
+was
+being
+collected
+.
 type
 :
 string
