--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -80721,6 +80721,47 @@ mirror
 :
 always
 #
+When
+true
+DNS
+resolutions
+will
+downgrade
+DNS
+#
+from
+AF_UNSPEC
+to
+AF_INET
+when
+no
+non
+-
+local
+IPv6
+addresses
+are
+#
+available
+.
+-
+name
+:
+network
+.
+dns
+.
+skip_ipv6_when_no_addresses
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 The
 proxy
 type
