Backed out 5 changesets (bug 1913965, bug 1919901, bug 1920337, bug 1914210) for causing failures at shadowrealm.html. CLOSED TREE
Backed out changeset d73f470a8104 (bug 1913965)
Backed out changeset cf38d186e70d (bug 1914210)
Backed out changeset 4a234b7b27de (bug 1913965)
Backed out changeset fa43b91823c7 (bug 1919901)
Backed out changeset 00a77e0dd0ed (bug 1920337)

UltraBlame original commit: 00403b194b93a289793876ec885d52b45ed2851c

--- a/testing/web-platform/meta/wasm/jsapi/js-string/basic.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/js-string/basic.tentative.any.js.ini
@@ -9,3 +9,64 @@ wasm_js_string_builtins
 :
 true
 ]
+[
+basic
+.
+tentative
+.
+any
+.
+shadowrealm
+.
+html
+]
+expected
+:
+ERROR
+[
+basic
+.
+tentative
+.
+any
+.
+html
+]
+[
+basic
+]
+expected
+:
+FAIL
+[
+basic
+.
+tentative
+.
+any
+.
+worker
+.
+html
+]
+[
+basic
+]
+expected
+:
+FAIL
+[
+basic
+.
+tentative
+.
+any
+.
+js
+]
+[
+Untitled
+]
+expected
+:
+FAIL
