Bug 1900395 - [devtools] Some general fixes for tests r=devtools-reviewers,nchevobbe
- Wait for Codemirror document load to complete in certain situations
- Make sure `getLocationsInViewport` handles properly when the source editor is destroyed

Differential Revision: https://phabricator.services.mozilla.com/D224127

UltraBlame original commit: 374dce0b2a082132cc20abf9542f49dea8aa6cdc

--- a/devtools/client/debugger/test/mochitest/browser_aj.toml
+++ b/devtools/client/debugger/test/mochitest/browser_aj.toml
@@ -1173,6 +1173,28 @@ eval
 js
 "
 ]
+fail
+-
+if
+=
+[
+"
+a11y_checks
+"
+]
+#
+Bug
+1849028
+clicked
+element
+may
+not
+be
+focusable
+and
+/
+or
+labeled
 [
 "
 browser_dbg
@@ -1329,6 +1351,28 @@ here
 js
 "
 ]
+fail
+-
+if
+=
+[
+"
+a11y_checks
+"
+]
+#
+Bug
+1849028
+clicked
+element
+may
+not
+be
+focusable
+and
+/
+or
+labeled
 [
 "
 browser_dbg
