--- a/devtools/client/debugger/test/mochitest/browser_kz.toml
+++ b/devtools/client/debugger/test/mochitest/browser_kz.toml
@@ -1013,6 +1013,28 @@ delete
 js
 "
 ]
+fail
+-
+if
+=
+[
+"
+a11y_checks
+"
+]
+#
+Bug
+1849028
+clicked
+element
+may
+not
+be
+focusable
+and
+/
+or
+labeled
 [
 "
 browser_dbg
