Bug 1904489 - [devtools] Enable Codemirror 6 by default r=devtools-reviewers,nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D221020

UltraBlame original commit: 707bdf41cb27229a5fc89163c3dacaf651b0bfc9

--- a/devtools/client/debugger/test/mochitest/browser_aj.toml
+++ b/devtools/client/debugger/test/mochitest/browser_aj.toml
@@ -369,10 +369,6 @@ if
 =
 [
 "
-!
-cm6
-&
-&
 a11y_checks
 "
 ]
@@ -478,10 +474,6 @@ if
 =
 [
 "
-!
-cm6
-&
-&
 a11y_checks
 "
 ]
@@ -530,10 +522,6 @@ if
 =
 [
 "
-!
-cm6
-&
-&
 a11y_checks
 "
 ]
@@ -621,10 +609,6 @@ if
 =
 [
 "
-!
-cm6
-&
-&
 a11y_checks
 "
 ]
@@ -1234,10 +1218,6 @@ if
 =
 [
 "
-!
-cm6
-&
-&
 a11y_checks
 "
 ]
@@ -1620,10 +1600,6 @@ if
 =
 [
 "
-!
-cm6
-&
-&
 a11y_checks
 "
 ]
@@ -2221,6 +2197,15 @@ features
 wasm
 .
 js
+"
+]
+skip
+-
+if
+=
+[
+"
+cm6
 "
 ]
 [
