--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14556,6 +14556,27 @@ false
 mirror
 :
 always
+-
+name
+:
+devtools
+.
+debugger
+.
+features
+.
+codemirror
+-
+next
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
 #
 -
 -
