--- a/dom/security/test/csp/mochitest.toml
+++ b/dom/security/test/csp/mochitest.toml
@@ -3188,6 +3188,25 @@ http2
 ]
 [
 "
+test_reporting_api_disabled
+.
+html
+"
+]
+skip
+-
+if
+=
+[
+"
+http3
+"
+"
+http2
+"
+]
+[
+"
 test_report_font_cache
 .
 html
