--- a/dom/media/webcodecs/test/mochitest.toml
+++ b/dom/media/webcodecs/test/mochitest.toml
@@ -25,6 +25,32 @@ enabled
 =
 true
 "
+"
+dom
+.
+media
+.
+webcodecs
+.
+image
+-
+decoder
+.
+enabled
+=
+true
+"
+]
+support
+-
+files
+=
+[
+"
+bug1921817
+.
+jpg
+"
 ]
 [
 "
@@ -33,3 +59,15 @@ test_videoFrame_mismatched_codedSize
 html
 "
 ]
+[
+"
+test_bug1921817
+.
+html
+"
+]
+scheme
+=
+"
+https
+"
