Bug 1924577 - vendor clubcard-crlite 0.3.0. r=keeler,supply-chain-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225552

UltraBlame original commit: 6d0cf0e555c512f4693eb99528c71b9588c10cc9

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -575,6 +575,154 @@ wildcard
 -
 audits
 .
+clubcard
+]
+]
+who
+=
+"
+John
+M
+.
+Schanck
+<
+jschanck
+mozilla
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+user
+-
+id
+=
+175410
+#
+John
+Schanck
+(
+jschanck
+)
+start
+=
+"
+2024
+-
+10
+-
+01
+"
+end
+=
+"
+2025
+-
+10
+-
+01
+"
+notes
+=
+"
+Maintained
+by
+the
+CryptoEng
+team
+at
+Mozilla
+.
+"
+[
+[
+wildcard
+-
+audits
+.
+clubcard
+-
+crlite
+]
+]
+who
+=
+"
+John
+M
+.
+Schanck
+<
+jschanck
+mozilla
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+user
+-
+id
+=
+175410
+#
+John
+Schanck
+(
+jschanck
+)
+start
+=
+"
+2024
+-
+10
+-
+01
+"
+end
+=
+"
+2025
+-
+10
+-
+01
+"
+notes
+=
+"
+Maintained
+by
+the
+CryptoEng
+team
+at
+Mozilla
+.
+"
+[
+[
+wildcard
+-
+audits
+.
 cocoa
 ]
 ]
