Bug 1924532 - Move tabMediaIndicator tests to browser/components/tabbrowser/. r=tabbrowser-reviewers,frontend-codestyle-reviewers,dwalker,mossop
Differential Revision: https://phabricator.services.mozilla.com/D225516

UltraBlame original commit: 1e663e2d276111c86f00afd2853de4405468c32b

--- a/tools/lint/rejected-words.yml
+++ b/tools/lint/rejected-words.yml
@@ -284,20 +284,6 @@ js
 -
 browser
 /
-base
-/
-content
-/
-test
-/
-tabMediaIndicator
-/
-browser_mute_webAudio
-.
-js
--
-browser
-/
 components
 /
 enterprisepolicies
@@ -409,6 +395,22 @@ sessionstore
 test
 /
 browser_crashedTabs
+.
+js
+-
+browser
+/
+components
+/
+tabbrowser
+/
+test
+/
+browser
+/
+tabMediaIndicator
+/
+browser_mute_webAudio
 .
 js
 -
