Bug 1920799 - Add tests for the new menu messaging surface for the FxA CTA message. r=pdahiya,omc-reviewers,home-newtab-reviewers,nbarrett
To manually test the message, make sure to set
`browser.newtabpage.activity-stream.asrouter.devtoolsEnabled` to `true`,
and then visit about:asrouter. Scroll down to the message with ID
FXA_ACCOUNTS_APPMENU_PROTECT_BROWSING_DATA, and click "Show".

This will default to opening the AppMenu with the message. You can open
it for the PXI menu by changing `testingTriggerContext` in the test
message definition from "app_menu" to "pxi_menu".

Differential Revision: https://phabricator.services.mozilla.com/D224790

UltraBlame original commit: ad12589113c3f73e207515ff05f793c168c6e3b0

--- a/browser/components/asrouter/tests/browser/browser.toml
+++ b/browser/components/asrouter/tests/browser/browser.toml
@@ -132,6 +132,13 @@ https_first_disabled
 true
 [
 "
+browser_asrouter_menu_messages
+.
+js
+"
+]
+[
+"
 browser_asrouter_milestone_message_cfr
 .
 js
