--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -52705,6 +52705,25 @@ value
 mirror
 :
 once
+-
+name
+:
+layers
+.
+gpu
+-
+process
+.
+extend_ipc_reply_timeout_ms
+type
+:
+int32_t
+value
+:
+20000
+mirror
+:
+once
 #
 How
 many
