Bug 1923894 - Collect timing_distribution from navigation start to request start in the pageload event r=acreskey,denispal
Differential Revision: https://phabricator.services.mozilla.com/D225672

UltraBlame original commit: e1401960795bb813909a18e039153711e68e2a34

--- a/dom/metrics.yaml
+++ b/dom/metrics.yaml
@@ -399,6 +399,24 @@ cgi
 id
 =
 1892231
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923894
 data_reviews
 :
 -
@@ -558,6 +576,26 @@ the
 top
 level
 document
+in
+ms
+.
+"
+type
+:
+quantity
+unit
+:
+ms
+time_to_request_start
+:
+description
+:
+"
+Time
+between
+requestStart
+and
+navigationStart
 in
 ms
 .
