--- a/package.json
+++ b/package.json
@@ -66,6 +66,22 @@ sdl
 2
 "
 "
+stylistic
+/
+stylelint
+-
+plugin
+"
+:
+"
+^
+3
+.
+1
+.
+0
+"
+"
 types
 /
 gecko
@@ -134,7 +150,7 @@ html
 .
 1
 .
-1
+2
 "
 "
 eslint
@@ -177,9 +193,9 @@ jsdoc
 "
 50
 .
-2
-.
 3
+.
+0
 "
 "
 eslint
@@ -251,7 +267,7 @@ unsanitized
 .
 1
 .
-0
+2
 "
 "
 eslint
@@ -264,9 +280,9 @@ react
 "
 7
 .
-36
+37
 .
-1
+0
 "
 "
 eslint
@@ -339,11 +355,11 @@ stylelint
 "
 :
 "
-15
+16
 .
-10
+9
 .
-3
+0
 "
 "
 stylelint
@@ -354,11 +370,11 @@ recommended
 "
 :
 "
-13
+14
 .
 0
 .
-0
+1
 "
 "
 stylelint
@@ -371,9 +387,9 @@ scss
 "
 :
 "
-11
+13
 .
-0
+1
 .
 0
 "
