Bug 1923913 - build: update `once_cell` 1.19.0 → 1.20.2 r=webgpu-reviewers,supply-chain-reviewers,teoxoy
Differential Revision: https://phabricator.services.mozilla.com/D225271

UltraBlame original commit: 9fdbee8318a1c9da1aa6aeac543cd2f49af9d541

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -32769,6 +32769,80 @@ delta
 [
 audits
 .
+once_cell
+]
+]
+who
+=
+"
+Erich
+Gubler
+<
+erichdongubler
+gmail
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+1
+.
+20
+.
+1
+-
+>
+1
+.
+20
+.
+2
+"
+notes
+=
+"
+This
+update
+works
+around
+a
+Cargo
+bug
+that
+forces
+the
+addition
+of
+portable
+-
+atomic
+into
+a
+lockfile
+which
+we
+have
+never
+needed
+to
+use
+.
+"
+[
+[
+audits
+.
 oneshot
 ]
 ]
