Bug 1922395 - Add tests to verify update init fixes r=nrishel,nalexander,application-update-reviewers
We test that, on init, we only clean up invalid pending updates. We also test that BITS jobs are cleaned up when we clean up the corresponding downloading update during initialization.

Differential Revision: https://phabricator.services.mozilla.com/D224853

UltraBlame original commit: 170b465d0f64df214f779ac3ce0e542947983ae2

--- a/toolkit/mozapps/update/tests/unit_aus_update/xpcshell.toml
+++ b/toolkit/mozapps/update/tests/unit_aus_update/xpcshell.toml
@@ -153,28 +153,7 @@ js
 ]
 [
 "
-cleanupDownloadingForDifferentChannel
-.
-js
-"
-]
-[
-"
-cleanupDownloadingForOlderAppVersion
-.
-js
-"
-]
-[
-"
-cleanupDownloadingForSameVersionAndBuildID
-.
-js
-"
-]
-[
-"
-cleanupDownloadingIncorrectStatus
+cleanupDownloading
 .
 js
 "
@@ -345,6 +324,13 @@ Windows
 specific
 .
 "
+[
+"
+initWithPendingUpdate
+.
+js
+"
+]
 [
 "
 languagePackUpdates
