Bug 1923663 - Add CHIPS pref to nimbus manifest. r=bvandersloot
Differential Revision: https://phabricator.services.mozilla.com/D225718

UltraBlame original commit: 7ffa1f3144279876fead3a19ac7e6de105746438

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -14136,6 +14136,35 @@ parallel
 -
 limit
 "
+chipsEnabled
+:
+description
+:
+Whether
+CHIPS
+is
+enabled
+or
+not
+type
+:
+boolean
+setPref
+:
+branch
+:
+default
+pref
+:
+"
+network
+.
+cookie
+.
+CHIPS
+.
+enabled
+"
 chipsPartitionLimitEnabled
 :
 description
