Bug 1921525 - enforce certificate transparency in nightly r=jschanck,fluent-reviewers,bolsson,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D224530

UltraBlame original commit: 3684b80b43cac0cb32cbbae5532d8056c7de58b9

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -95700,6 +95700,12 @@ are
 not
 performed
 .
+#
+2
+:
+Enforce
+CT
+.
 -
 name
 :
@@ -95714,8 +95720,20 @@ type
 :
 RelaxedAtomicUint32
 #
-ifdef
+if
+defined
+(
+NIGHTLY_BUILD
+)
+value
+:
+2
+#
+elif
+defined
+(
 EARLY_BETA_OR_EARLIER
+)
 value
 :
 1
