Backed out 2 changesets (bug 1923251) for causing build bustages in HTMLEditor.cpp. CLOSED TREE
Backed out changeset 526e6dccb137 (bug 1923251)
Backed out changeset b61267a75e51 (bug 1923251)

UltraBlame original commit: 5a81f48b101863e85d1979bef24d2fd3a2787880

--- a/testing/web-platform/meta/editing/run/inserthtml.html.ini
+++ b/testing/web-platform/meta/editing/run/inserthtml.html.ini
@@ -3,16 +3,6 @@ inserthtml
 .
 html
 ]
-max
--
-asserts
-:
-14
-min
--
-asserts
-:
-6
 expected
 :
 if
@@ -31,6 +21,16 @@ fission
 OK
 TIMEOUT
 ]
+max
+-
+asserts
+:
+14
+min
+-
+asserts
+:
+6
 [
 [
 [
@@ -1748,6 +1748,69 @@ bar
 <
 /
 span
+>
+<
+/
+p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserthtml
+"
+"
+<
+!
+-
+-
+abc
+-
+-
+>
+"
+\
+]
+\
+]
+"
+<
+p
+>
+<
+!
+-
+-
+foo
+-
+-
+>
+<
+span
+>
+<
+br
+>
+<
+/
+span
+>
+{
+}
+<
+!
+-
+-
+bar
+-
+-
 >
 <
 /
