--- a/testing/web-platform/meta/editing/run/inserttext.html.ini
+++ b/testing/web-platform/meta/editing/run/inserttext.html.ini
@@ -679,6 +679,59 @@ inserttext
 \
 ]
 "
+{
+}
+<
+br
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserttext
+"
+"
+"
+\
+]
+\
+]
+"
+<
+p
+>
+{
+}
+<
+br
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserttext
+"
+"
+"
+\
+]
+\
+]
+"
 <
 p
 >
@@ -1929,6 +1982,97 @@ a
 \
 ]
 "
+{
+}
+<
+br
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserttext
+"
+"
+a
+"
+\
+]
+\
+]
+"
+<
+p
+>
+{
+}
+<
+br
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserttext
+"
+"
+a
+"
+\
+]
+\
+]
+"
+<
+p
+>
+<
+span
+>
+{
+}
+<
+br
+>
+<
+/
+span
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserttext
+"
+"
+a
+"
+\
+]
+\
+]
+"
 <
 p
 >
@@ -2231,6 +2375,81 @@ br
 }
 <
 span
+>
+<
+/
+span
+>
+<
+p
+>
+c
+<
+/
+p
+>
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserttext
+"
+"
+b
+"
+\
+]
+\
+]
+"
+<
+div
+style
+=
+\
+\
+"
+white
+-
+space
+:
+pre
+-
+wrap
+\
+\
+"
+>
+a
+<
+br
+>
+{
+}
+<
+span
+style
+=
+\
+\
+"
+padding
+:
+1px
+\
+\
+"
 >
 <
 /
