--- a/testing/web-platform/meta/editing/plaintext-only/insertText.html.ini
+++ b/testing/web-platform/meta/editing/plaintext-only/insertText.html.ini
@@ -106,6 +106,82 @@ p
 b
 >
 [
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
 A
 \
 ]
@@ -519,6 +595,82 @@ p
 b
 >
 [
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
 A
 \
 ]
@@ -930,6 +1082,82 @@ p
 b
 >
 [
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
 A
 \
 ]
@@ -1316,6 +1544,82 @@ execCommand
 (
 "
 insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
 "
 )
 ]
