Bug 1887861 - Run Snap Selenium tests on Ubuntu 22.04 and 24.04 r=releng-reviewers,taskgraph-reviewers,bhearsum
Differential Revision: https://phabricator.services.mozilla.com/D216378

UltraBlame original commit: 5ee598dd0316c7a096c319ed3c1aac14b8a93e07

--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -9340,6 +9340,8 @@ t
 -
 linux
 -
+2204
+-
 wayland
 -
 snap
@@ -9373,6 +9375,50 @@ t
 linux
 -
 2204
+-
+wayland
+-
+snap
+'
+t
+-
+linux
+-
+2404
+-
+wayland
+-
+snap
+:
+provisioner
+:
+'
+{
+trust
+-
+domain
+}
+-
+t
+'
+implementation
+:
+generic
+-
+worker
+os
+:
+linux
+worker
+-
+type
+:
+'
+t
+-
+linux
+-
+2404
 -
 wayland
 -
