--- a/taskcluster/kinds/snap-upstream-test/kind.yml
+++ b/taskcluster/kinds/snap-upstream-test/kind.yml
@@ -113,6 +113,19 @@ task
 -
 defaults
 :
+from
+-
+deps
+:
+group
+-
+by
+:
+single
+-
+with
+-
+filters
 attributes
 :
 retrigger
@@ -129,43 +142,6 @@ test
 tier
 :
 2
-scopes
-:
--
-generic
--
-worker
-:
-os
--
-group
-:
-gecko
--
-t
-/
-t
--
-linux
--
-2204
--
-wayland
--
-snap
-/
-snap_sudo
-worker
--
-type
-:
-t
--
-linux
--
-wayland
--
-snap
 run
 :
 using
@@ -176,6 +152,24 @@ task
 checkout
 :
 false
+fetches
+:
+snap
+-
+upstream
+-
+build
+:
+-
+firefox
+.
+snap
+-
+snap
+-
+tests
+.
+zip
 worker
 :
 max
@@ -227,20 +221,9 @@ snap_sudo
 tasks
 :
 basic
+-
+2204
 :
-from
--
-deps
-:
-group
--
-by
-:
-single
--
-with
--
-filters
 description
 :
 Runs
@@ -251,6 +234,50 @@ a
 Firefox
 Snap
 package
+against
+Ubuntu
+22
+.
+04
+scopes
+:
+-
+generic
+-
+worker
+:
+os
+-
+group
+:
+gecko
+-
+t
+/
+t
+-
+linux
+-
+2204
+-
+wayland
+-
+snap
+/
+snap_sudo
+worker
+-
+type
+:
+t
+-
+linux
+-
+2204
+-
+wayland
+-
+snap
 run
 :
 command
@@ -276,24 +303,6 @@ sh
 -
 -
 basic
-fetches
-:
-snap
--
-upstream
--
-build
-:
--
-firefox
-.
-snap
--
-snap
--
-tests
-.
-zip
 treeherder
 :
 platform
@@ -312,21 +321,15 @@ attributes
 snap_test_type
 :
 basic
+snap_test_release
+:
+"
+2204
+"
 qa
+-
+2204
 :
-from
--
-deps
-:
-group
--
-by
-:
-single
--
-with
--
-filters
 description
 :
 Runs
@@ -338,6 +341,50 @@ a
 Firefox
 Snap
 package
+against
+Ubuntu
+22
+.
+04
+scopes
+:
+-
+generic
+-
+worker
+:
+os
+-
+group
+:
+gecko
+-
+t
+/
+t
+-
+linux
+-
+2204
+-
+wayland
+-
+snap
+/
+snap_sudo
+worker
+-
+type
+:
+t
+-
+linux
+-
+2204
+-
+wayland
+-
+snap
 run
 :
 command
@@ -363,24 +410,6 @@ sh
 -
 -
 qa
-fetches
-:
-snap
--
-upstream
--
-build
-:
--
-firefox
-.
-snap
--
-snap
--
-tests
-.
-zip
 treeherder
 :
 platform
@@ -399,3 +428,221 @@ attributes
 snap_test_type
 :
 qa
+snap_test_release
+:
+"
+2204
+"
+basic
+-
+2404
+:
+description
+:
+Runs
+basic
+tests
+on
+a
+Firefox
+Snap
+package
+against
+Ubuntu
+24
+.
+04
+scopes
+:
+-
+generic
+-
+worker
+:
+os
+-
+group
+:
+gecko
+-
+t
+/
+t
+-
+linux
+-
+2404
+-
+wayland
+-
+snap
+/
+snap_sudo
+worker
+-
+type
+:
+t
+-
+linux
+-
+2404
+-
+wayland
+-
+snap
+run
+:
+command
+:
+>
+-
+export
+TASKCLUSTER_ROOT_DIR
+=
+PWD
+&
+&
+cd
+MOZ_FETCHES_DIR
+/
+&
+&
+.
+/
+tests
+.
+sh
+-
+-
+basic
+treeherder
+:
+platform
+:
+linux64
+/
+opt
+symbol
+:
+Sel
+(
+basic
+)
+attributes
+:
+snap_test_type
+:
+basic
+snap_test_release
+:
+"
+2404
+"
+qa
+-
+2404
+:
+description
+:
+Runs
+some
+QA
+tests
+on
+a
+Firefox
+Snap
+package
+against
+Ubuntu
+24
+.
+04
+scopes
+:
+-
+generic
+-
+worker
+:
+os
+-
+group
+:
+gecko
+-
+t
+/
+t
+-
+linux
+-
+2404
+-
+wayland
+-
+snap
+/
+snap_sudo
+worker
+-
+type
+:
+t
+-
+linux
+-
+2404
+-
+wayland
+-
+snap
+run
+:
+command
+:
+>
+-
+export
+TASKCLUSTER_ROOT_DIR
+=
+PWD
+&
+&
+cd
+MOZ_FETCHES_DIR
+/
+&
+&
+.
+/
+tests
+.
+sh
+-
+-
+qa
+treeherder
+:
+platform
+:
+linux64
+/
+opt
+symbol
+:
+Sel
+(
+QA
+)
+attributes
+:
+snap_test_type
+:
+qa
+snap_test_release
+:
+"
+2404
+"
