Bug 1924629 - [wpt-sync] Update web-platform-tests to 598e86ac6913319529be27d0f1e53d79773c72cc, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 598e86ac6913319529be27d0f1e53d79773c72cc
wpt-type: landing

UltraBlame original commit: e827e029d086944fc14449be004b763578bfe7f1

--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp.https.window.js.ini
@@ -14,8 +14,28 @@ dedicated_worker
 expected
 :
 if
+(
+os
+=
+=
+"
+win
+"
+)
+and
 debug
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+TIMEOUT
+if
 (
 os
 =
@@ -24,6 +44,8 @@ os
 linux
 "
 )
+and
+debug
 and
 not
 fission
