--- a/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-grid/alignment/grid-align-baseline-line-clamp-002.tentative.html.ini
@@ -84,79 +84,42 @@ linux
 "
 )
 and
-not
 debug
-and
-asan
 and
 fission
 :
-[
 PASS
-FAIL
-]
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-not
-debug
-and
-asan
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-debug
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+android
 "
-)
-and
-not
-debug
-and
-not
-asan
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
 [
 .
 target
@@ -206,79 +169,42 @@ linux
 "
 )
 and
-not
 debug
-and
-asan
 and
 fission
 :
-[
 PASS
-FAIL
-]
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-not
-debug
-and
-asan
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-debug
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+android
 "
-)
-and
-not
-debug
-and
-not
-asan
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
 [
 .
 target
@@ -328,76 +254,39 @@ linux
 "
 )
 and
-not
 debug
-and
-asan
 and
 fission
 :
-[
 PASS
-FAIL
-]
 if
-(
 os
 =
 =
 "
-linux
+win
 "
-)
-and
-not
-debug
-and
-asan
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+mac
 "
-)
-and
-debug
-and
-not
-fission
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-linux
+android
 "
-)
-and
-not
-debug
-and
-not
-asan
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
