--- a/testing/web-platform/meta/fetch/api/redirect/redirect-keepalive.https.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/redirect/redirect-keepalive.https.any.js.ini
@@ -12,6 +12,8 @@ html
 expected
 :
 if
+fission
+and
 (
 os
 =
@@ -35,6 +37,8 @@ x86_64
 :
 OK
 if
+fission
+and
 (
 os
 =
@@ -44,42 +48,15 @@ linux
 "
 )
 and
-fission
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
+debug
 :
 [
 TIMEOUT
 OK
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 not
 fission
-:
-OK
-if
-os
-=
-=
-"
-android
-"
 :
 OK
 [
@@ -109,6 +86,8 @@ up
 expected
 :
 if
+fission
+and
 (
 os
 =
@@ -132,6 +111,8 @@ x86_64
 :
 PASS
 if
+fission
+and
 (
 os
 =
@@ -141,42 +122,15 @@ linux
 "
 )
 and
-fission
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
+debug
 :
 [
 TIMEOUT
 PASS
 ]
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 not
 fission
-:
-PASS
-if
-os
-=
-=
-"
-android
-"
 :
 PASS
 [
