--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-remove-src.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-remove-src.html.ini
@@ -33,44 +33,61 @@ os
 =
 =
 "
-linux
+win
 "
 )
-and
-not
-fission
-and
-not
-swgl
-and
-not
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-fission
-and
-not
-swgl
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+asan
+and
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
 ]
 if
 (
@@ -83,13 +100,13 @@ linux
 )
 and
 not
-fission
+asan
 and
-swgl
+tsan
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -101,7 +118,11 @@ linux
 "
 )
 and
-fission
+not
+asan
+and
+not
+tsan
 :
 [
 FAIL
