--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
@@ -29,13 +29,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 FAIL
-PASS
-]
 if
 (
 os
@@ -46,21 +42,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 FAIL
-PASS
-]
 if
 (
 os
@@ -71,34 +56,22 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 FAIL
-PASS
-]
 if
-(
 os
 =
 =
 "
-android
+mac
 "
-)
-and
-not
-debug
 :
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
 [
 loading
 attribute
@@ -135,13 +108,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -152,21 +121,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -177,24 +135,18 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 PASS
-FAIL
-]
 if
 os
 =
 =
 "
-android
+mac
 "
 :
+PASS
 [
 PASS
 FAIL
@@ -222,13 +174,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -239,21 +187,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -264,24 +201,18 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 PASS
-FAIL
-]
 if
 os
 =
 =
 "
-android
+mac
 "
 :
+PASS
 [
 PASS
 FAIL
@@ -314,13 +245,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -331,21 +258,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -356,24 +272,18 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 PASS
-FAIL
-]
 if
 os
 =
 =
 "
-android
+mac
 "
 :
+PASS
 [
 PASS
 FAIL
@@ -400,13 +310,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -417,21 +323,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -442,24 +337,18 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 PASS
-FAIL
-]
 if
 os
 =
 =
 "
-android
+mac
 "
 :
+PASS
 [
 PASS
 FAIL
@@ -486,13 +375,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -503,21 +388,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -528,29 +402,18 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 PASS
-FAIL
-]
 if
-(
 os
 =
 =
 "
-android
+mac
 "
-)
-and
-not
-debug
 :
+PASS
 [
 PASS
 FAIL
@@ -579,13 +442,9 @@ tsan
 and
 debug
 and
-not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -596,21 +455,10 @@ win
 "
 )
 and
+not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -621,24 +469,18 @@ linux
 "
 )
 and
-not
 tsan
-and
-not
-debug
 :
-[
 PASS
-FAIL
-]
 if
 os
 =
 =
 "
-android
+mac
 "
 :
+PASS
 [
 PASS
 FAIL
