--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -33,16 +33,38 @@ linux
 )
 and
 not
+tsan
+and
+not
 debug
 and
+not
 asan
-and
-fission
 :
-[
-FAIL
 PASS
-]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+PASS
 if
 (
 os
@@ -52,34 +74,6 @@ os
 linux
 "
 )
-and
-not
-debug
-and
-asan
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 and
 tsan
 :
@@ -93,78 +87,23 @@ os
 =
 =
 "
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 android
 "
 )
 and
+not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -197,16 +136,38 @@ linux
 )
 and
 not
+tsan
+and
+not
 debug
 and
+not
 asan
-and
-fission
 :
-[
-FAIL
 PASS
-]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+PASS
 if
 (
 os
@@ -216,34 +177,6 @@ os
 linux
 "
 )
-and
-not
-debug
-and
-asan
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 and
 tsan
 :
@@ -257,78 +190,23 @@ os
 =
 =
 "
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 android
 "
 )
 and
+not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -361,16 +239,38 @@ linux
 )
 and
 not
+tsan
+and
+not
 debug
 and
+not
 asan
-and
-fission
 :
-[
-FAIL
 PASS
-]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+PASS
 if
 (
 os
@@ -380,34 +280,6 @@ os
 linux
 "
 )
-and
-not
-debug
-and
-asan
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 and
 tsan
 :
@@ -421,78 +293,23 @@ os
 =
 =
 "
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 android
 "
 )
 and
+not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -523,16 +340,38 @@ linux
 )
 and
 not
+tsan
+and
+not
 debug
 and
+not
 asan
-and
-fission
 :
-[
-FAIL
 PASS
-]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+PASS
 if
 (
 os
@@ -542,34 +381,6 @@ os
 linux
 "
 )
-and
-not
-debug
-and
-asan
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 and
 tsan
 :
@@ -583,78 +394,23 @@ os
 =
 =
 "
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 android
 "
 )
 and
+not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -681,16 +437,38 @@ linux
 )
 and
 not
+tsan
+and
+not
 debug
 and
+not
 asan
-and
-fission
 :
-[
-FAIL
 PASS
-]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+PASS
 if
 (
 os
@@ -700,34 +478,6 @@ os
 linux
 "
 )
-and
-not
-debug
-and
-asan
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 and
 tsan
 :
@@ -741,78 +491,23 @@ os
 =
 =
 "
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 android
 "
 )
 and
+not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
