--- a/testing/web-platform/meta/video-rvfc/request-video-frame-callback-repeating.html.ini
+++ b/testing/web-platform/meta/video-rvfc/request-video-frame-callback-repeating.html.ini
@@ -39,35 +39,7 @@ linux
 )
 and
 not
-asan
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 tsan
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-asan
 and
 (
 processor
@@ -79,7 +51,9 @@ x86_64
 )
 and
 not
-tsan
+fission
+and
+debug
 :
 [
 PASS
@@ -95,9 +69,67 @@ linux
 "
 )
 and
-asan
+not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+fission
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+tsan
 :
 [
 PASS
