--- a/testing/web-platform/meta/webrtc-encoded-transform/RTCRtpScriptTransform-encoded-transform.https.html.ini
+++ b/testing/web-platform/meta/webrtc-encoded-transform/RTCRtpScriptTransform-encoded-transform.https.html.ini
@@ -12,9 +12,6 @@ html
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -23,6 +20,9 @@ os
 win
 "
 )
+and
+not
+debug
 and
 (
 processor
@@ -35,9 +35,6 @@ x86
 :
 OK
 if
-not
-debug
-and
 (
 os
 =
@@ -46,6 +43,9 @@ os
 linux
 "
 )
+and
+not
+debug
 :
 [
 TIMEOUT
@@ -131,7 +131,10 @@ and
 not
 debug
 :
+[
+FAIL
 TIMEOUT
+]
 FAIL
 [
 Sender
@@ -188,8 +191,8 @@ not
 debug
 :
 [
-NOTRUN
 PASS
+NOTRUN
 ]
 [
 Sender
@@ -243,7 +246,7 @@ not
 debug
 :
 [
+TIMEOUT
 NOTRUN
 PASS
-TIMEOUT
 ]
