--- a/testing/web-platform/meta/websockets/Close-1000-reason.any.js.ini
+++ b/testing/web-platform/meta/websockets/Close-1000-reason.any.js.ini
@@ -15,24 +15,6 @@ wpt_flags
 =
 h2
 ]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
-]
 [
 Close
 -
@@ -45,24 +27,6 @@ any
 html
 ?
 wss
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
 ]
 [
 Close
@@ -110,24 +74,11 @@ html
 ?
 wss
 ]
-expected
+max
+-
+asserts
 :
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
-]
+2
 [
 Close
 -
@@ -172,21 +123,31 @@ wpt_flags
 =
 h2
 ]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
 [
-OK
-TIMEOUT
+Close
+-
+1000
+-
+reason
+.
+any
+.
+worker
+.
+html
+?
+default
+]
+[
+Close
+-
+1000
+-
+reason
+.
+any
+.
+html
+?
+default
 ]
