--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_continuously_increasing.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_continuously_increasing.https.window.js.ini
@@ -14,8 +14,32 @@ dedicated_worker
 expected
 :
 if
-not
-fission
+debug
+and
+(
+os
+=
+=
+"
+win
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+ERROR
+TIMEOUT
+]
+if
+debug
 and
 (
 os
@@ -26,7 +50,8 @@ linux
 "
 )
 and
-debug
+not
+fission
 :
 [
 ERROR
