--- a/testing/web-platform/meta/content-security-policy/webrtc/webrtc-blocked-explicit.html.ini
+++ b/testing/web-platform/meta/content-security-policy/webrtc/webrtc-blocked-explicit.html.ini
@@ -19,4 +19,29 @@ policy
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+FAIL
+PASS
+]
 FAIL
