--- a/testing/web-platform/meta/css/css-scroll-anchoring/zero-scroll-offset-001.html.ini
+++ b/testing/web-platform/meta/css/css-scroll-anchoring/zero-scroll-offset-001.html.ini
@@ -32,11 +32,39 @@ linux
 "
 )
 and
+not
 debug
+and
+not
+tsan
+and
+asan
 and
 fission
 :
+[
+FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+tsan
+:
+[
+FAIL
+PASS
+]
 if
 (
 os
