--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-unsafe-none-to-same-origin.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-unsafe-none-to-same-origin.https.html.ini
@@ -1135,24 +1135,6 @@ html
 -
 6
 ]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
-]
 [
 iframe
 -
@@ -1188,11 +1170,12 @@ android
 "
 )
 and
-fission
+not
+debug
 :
 [
 OK
-TIMEOUT
+ERROR
 ]
 [
 iframe
@@ -1216,24 +1199,6 @@ html
 9
 -
 last
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
 ]
 [
 iframe
@@ -1260,24 +1225,6 @@ html
 ]
 expected
 :
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-and
-fission
-:
-[
-OK
-TIMEOUT
-]
 if
 (
 os
@@ -1317,22 +1264,4 @@ html
 3
 -
 4
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
 ]
