--- a/testing/web-platform/meta/intersection-observer/scroll-margin-zero.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-zero.html.ini
@@ -26,7 +26,7 @@ linux
 )
 and
 not
-tsan
+debug
 and
 (
 processor
@@ -37,10 +37,36 @@ x86_64
 "
 )
 and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 debug
 and
-fission
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
 asan
@@ -59,18 +85,6 @@ linux
 "
 )
 and
-not
-tsan
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 debug
 and
 fission
@@ -89,39 +103,10 @@ linux
 "
 )
 and
-not
-tsan
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
 debug
 and
 not
 fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
 :
 [
 PASS
