--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
@@ -53,59 +53,13 @@ os
 =
 =
 "
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 mac
 "
 )
 and
-not
 debug
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -116,8 +70,19 @@ linux
 "
 )
 and
+not
 tsan
 :
+PASS
+if
+os
+=
+=
+"
+android
+"
+:
+PASS
 [
 PASS
 FAIL
