--- a/testing/web-platform/meta/webrtc/RTCPeerConnection-getStats-timestamp.https.html.ini
+++ b/testing/web-platform/meta/webrtc/RTCPeerConnection-getStats-timestamp.https.html.ini
@@ -27,6 +27,32 @@ os
 =
 =
 "
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 mac
 "
 )
