--- a/widget/tests/browser/browser.toml
+++ b/widget/tests/browser/browser.toml
@@ -102,6 +102,20 @@ js
 ]
 [
 "
+browser_test_contentCommand_insertText_with_selection_cache
+.
+js
+"
+]
+[
+"
+browser_test_contentCommand_replaceText_with_selection_cache
+.
+js
+"
+]
+[
+"
 browser_test_fullscreen_size
 .
 js
