Bug 1914372: part 2) Add `TrustedHTML` to the interface of `Element.innerHTML`. r=smaug,peterv,farre
Differential Revision: https://phabricator.services.mozilla.com/D219876

UltraBlame original commit: 703d702702f3a0f6118272d43e36b7523f09ad01

--- a/testing/web-platform/meta/trusted-types/default-policy-report-only.html.ini
+++ b/testing/web-platform/meta/trusted-types/default-policy-report-only.html.ini
@@ -9,9 +9,6 @@ only
 .
 html
 ]
-expected
-:
-TIMEOUT
 [
 Count
 SecurityPolicyViolation
@@ -20,7 +17,7 @@ events
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 script
 .
