--- a/testing/web-platform/meta/trusted-types/trusted-types-svg-script-set-href.html.ini
+++ b/testing/web-platform/meta/trusted-types/trusted-types-svg-script-set-href.html.ini
@@ -59,3 +59,19 @@ setAttribute
 expected
 :
 FAIL
+[
+Assign
+String
+to
+SVGScriptElement
+.
+innerHTML
+w
+/
+default
+policy
+.
+]
+expected
+:
+FAIL
