Bug 1913339: part 4) Implement default-policy support for `Element.innerHTML` and `Element.insertAdjacentHTML`. r=peterv,smaug,sessionstore-reviewers,sclements
Differential Revision: https://phabricator.services.mozilla.com/D219256

UltraBlame original commit: 8f8c6c4a4ab8b28caa1c47134349f509fb028d1d

--- a/testing/web-platform/meta/trusted-types/default-policy-report-only.html.ini
+++ b/testing/web-platform/meta/trusted-types/default-policy-report-only.html.ini
@@ -9,6 +9,9 @@ only
 .
 html
 ]
+expected
+:
+TIMEOUT
 [
 Count
 SecurityPolicyViolation
@@ -17,7 +20,7 @@ events
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 script
 .
@@ -40,33 +43,6 @@ FAIL
 script
 .
 src
-typeerror
-]
-expected
-:
-FAIL
-[
-div
-.
-innerHTML
-default
-]
-expected
-:
-FAIL
-[
-div
-.
-innerHTML
-throw
-]
-expected
-:
-FAIL
-[
-div
-.
-innerHTML
 typeerror
 ]
 expected
