--- a/testing/web-platform/meta/trusted-types/default-policy.html.ini
+++ b/testing/web-platform/meta/trusted-types/default-policy.html.ini
@@ -5,6 +5,9 @@ policy
 .
 html
 ]
+expected
+:
+TIMEOUT
 [
 Count
 SecurityPolicyViolation
@@ -13,7 +16,7 @@ events
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 script
 .
@@ -77,24 +80,6 @@ script
 .
 src
 typeerror
-]
-expected
-:
-FAIL
-[
-div
-.
-innerHTML
-default
-]
-expected
-:
-FAIL
-[
-div
-.
-innerHTML
-throw
 ]
 expected
 :
