--- a/testing/web-platform/meta/webdriver/tests/bidi/storage/get_cookies/partition.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/storage/get_cookies/partition.py.ini
@@ -99,3 +99,36 @@ cgi
 id
 =
 1877953
+[
+test_partition_context_iframe
+[
+cross_origin
+\
+]
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1865198
+expected
+:
+if
+not
+nightly_build
+:
+FAIL
