Bug 1920496 - Make ColorFunction be stored in ComputedStyle r=emilio
We now fully support the full ColorFunction in the ComputedStyle struct
in layout.  This solves an issue where colors are copied on the C++
side.

Some structs had to be renamed to avoid name collisions in the generates
C++ code.

Some specified structs has the #[repr(C)] attribute now to include them
in the ComputedStyle struct.  This is not really correct as they are
specified values and only computed values should be there. Splitting all
the unit structs into specified and computed is a lot of changes so
there is a follow up bug here:
https://bugzilla.mozilla.org/show_bug.cgi?id=1924483

Differential Revision: https://phabricator.services.mozilla.com/D225080

UltraBlame original commit: 4902c4964fcb405178c8c26bd3c1225e961e2ad9

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -5627,6 +5627,27 @@ ScrollbarColor
 gecko
 =
 "
+StyleColorComponent
+"
+servo
+=
+"
+crate
+:
+:
+color
+:
+:
+component
+:
+:
+ColorComponent
+"
+}
+{
+gecko
+=
+"
 StyleAbsoluteColor
 "
 servo
