--- a/testing/web-platform/meta/css/css-color/parsing/color-computed-relative-color.html.ini
+++ b/testing/web-platform/meta/css/css-color/parsing/color-computed-relative-color.html.ini
@@ -21,24 +21,6 @@ rebeccapurple
 none
 none
 none
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-color
-value
-'
-rgb
-(
-from
-rebeccapurple
-none
-none
-none
 /
 none
 )
@@ -58,27 +40,9 @@ from
 rebeccapurple
 r
 g
-none
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-color
-value
-'
-rgb
-(
-from
-rebeccapurple
-r
-g
-none
+b
 /
-alpha
+none
 )
 '
 ]
@@ -107,9 +71,9 @@ rgb
 )
 r
 g
-none
+b
 /
-alpha
+none
 )
 '
 ]
@@ -118,205 +82,24 @@ expected
 FAIL
 [
 Property
-background
--
-color
-value
-'
-rgb
-(
-from
-currentColor
-r
-g
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-hsl
-(
-from
-currentColor
-h
-s
-l
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-hwb
-(
-from
-currentColor
-h
-w
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-lab
-(
-from
-currentColor
-l
-a
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-oklab
-(
-from
-currentColor
-l
-a
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-lch
-(
-from
-currentColor
-l
-c
-h
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-oklch
-(
-from
-currentColor
-l
-c
-h
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
 color
 value
 '
 color
+-
+mix
 (
-from
-currentColor
+in
 srgb
-r
-g
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-color
-(
-from
-currentColor
-srgb
--
-linear
-r
-g
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-color
-(
-from
-currentColor
-a98
--
 rgb
-r
+(
+from
+rebeccapurple
+none
 g
 b
+)
+rebeccapurple
 )
 '
 ]
@@ -325,103 +108,34 @@ expected
 FAIL
 [
 Property
-background
--
 color
 value
 '
 color
 (
 from
-currentColor
-rec2020
-r
-g
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-color
-(
-from
-currentColor
-prophoto
--
 rgb
-r
-g
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-color
 (
 from
-currentColor
-display
--
-p3
-r
-g
-b
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
 color
 (
-from
-currentColor
 xyz
-x
-y
-z
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
 -
-color
-value
-'
-color
-(
-from
-currentColor
+d50
+0
+.
+99
+0
+.
+88
+0
+.
+77
+)
+r
+g
+b
+)
 xyz
 -
 d50
@@ -436,107 +150,40 @@ expected
 FAIL
 [
 Property
-background
--
 color
 value
 '
 color
 (
 from
-currentColor
+rgb
+(
+from
+color
+(
+xyz
+-
+d65
+0
+.
+99
+0
+.
+88
+0
+.
+77
+)
+r
+g
+b
+)
 xyz
 -
 d65
 x
 y
 z
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-hsl
-(
-from
-currentColor
-calc
-(
-(
-h
-/
-360
-)
-*
-360deg
-)
-s
-l
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-rgb
-(
-from
-color
--
-mix
-(
-in
-srgb
-currentColor
-red
-)
-r
-g
-b
-/
-alpha
-)
-'
-]
-expected
-:
-FAIL
-[
-Property
-background
--
-color
-value
-'
-rgb
-(
-from
-rgb
-(
-from
-currentColor
-r
-g
-b
-)
-r
-g
-b
 )
 '
 ]
