--- a/mobile/android/fenix/app/onboarding.fml.yaml
+++ b/mobile/android/fenix/app/onboarding.fml.yaml
@@ -595,6 +595,261 @@ default
 [
 NEVER
 ]
+add
+-
+ons
+-
+data
+:
+type
+:
+List
+<
+AddOnData
+>
+description
+:
+>
+An
+optional
+list
+of
+add
+-
+ons
+which
+will
+be
+shown
+in
+add
+-
+on
+onboarding
+card
+.
+default
+:
+[
+]
+AddOnData
+:
+description
+:
+An
+object
+to
+describe
+an
+add
+-
+on
+to
+be
+installed
+from
+the
+onboarding
+card
+.
+fields
+:
+install
+-
+url
+:
+type
+:
+Text
+description
+:
+The
+url
+from
+where
+the
+add
+-
+on
+can
+be
+installed
+.
+#
+This
+should
+never
+be
+defaulted
+.
+default
+:
+"
+"
+name
+:
+type
+:
+Text
+description
+:
+The
+name
+of
+the
+add
+-
+on
+to
+be
+displayed
+to
+the
+user
+.
+#
+This
+should
+never
+be
+defaulted
+.
+default
+:
+"
+"
+description
+:
+type
+:
+Text
+description
+:
+A
+small
+description
+of
+the
+add
+-
+on
+to
+be
+displayed
+to
+the
+user
+.
+#
+This
+should
+never
+be
+defaulted
+.
+default
+:
+"
+"
+icon
+-
+res
+:
+type
+:
+Image
+description
+:
+The
+resource
+id
+of
+the
+icon
+of
+the
+add
+-
+on
+to
+be
+displayed
+.
+#
+This
+should
+never
+be
+defaulted
+.
+default
+:
+ic_onboarding_welcome
+average
+-
+rating
+:
+type
+:
+String
+description
+:
+The
+average
+rating
+of
+the
+add
+-
+on
+.
+#
+This
+should
+never
+be
+defaulted
+.
+default
+:
+"
+0
+.
+0
+"
+review
+-
+count
+:
+type
+:
+String
+description
+:
+The
+amount
+of
+reviews
+the
+add
+-
+on
+has
+.
+#
+This
+should
+never
+be
+defaulted
+.
+default
+:
+"
+0
+.
+0
+"
 enums
 :
 OnboardingCardType
@@ -674,4 +929,20 @@ search
 widget
 to
 homescreen
+.
+add
+-
+ons
+:
+description
+:
+Allows
+user
+to
+install
+add
+-
+ons
+from
+onboarding
 .
