Bug 1877935 - Enable HTTPS-First for non-default ports r=maltejur,necko-reviewers,devtools-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225241

UltraBlame original commit: ca419c505418eadd28fa4920bc60ec4a0b65db65

--- a/browser/base/content/test/captivePortal/browser.toml
+++ b/browser/base/content/test/captivePortal/browser.toml
@@ -83,14 +83,17 @@ js
 ]
 [
 "
-browser_closeCapPortalTabCanonicalURL
+browser_captivePortal_trr_mode3
 .
 js
 "
 ]
+https_first_disabled
+=
+true
 [
 "
-browser_captivePortal_trr_mode3
+browser_closeCapPortalTabCanonicalURL
 .
 js
 "
