--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -24637,6 +24637,35 @@ always
 #
 If
 true
+HTTPS
+-
+First
+will
+upgrade
+non
+-
+default
+ports
+-
+name
+:
+dom
+.
+security
+.
+https_first_for_custom_ports
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
+If
+true
 top
 -
 level
