Bug 1925028 - Focus: Define new `dau-reporting` ping r=frank,android-reviewers,mcarare
This change allows us to offer Firefox users more granular choices in data collection.

Differential Revision: https://phabricator.services.mozilla.com/D225793

UltraBlame original commit: 1f157b585423d34767f991930378f4c0a95f995d

--- a/mobile/android/focus-android/app/metrics.yaml
+++ b/mobile/android/focus-android/app/metrics.yaml
@@ -1948,6 +1948,10 @@ send_in_pings
 :
 -
 metrics
+-
+dau
+-
+reporting
 bugs
 :
 -
@@ -2022,6 +2026,24 @@ cgi
 id
 =
 1809447
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_reviews
 :
 -
@@ -2120,6 +2142,24 @@ pull
 issuecomment
 -
 1377494482
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_sensitivity
 :
 -
@@ -2257,6 +2297,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 no_lint
 :
 -
@@ -2317,6 +2361,24 @@ cgi
 id
 =
 1809447
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_reviews
 :
 -
@@ -2415,6 +2477,24 @@ pull
 issuecomment
 -
 1377494482
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_sensitivity
 :
 -
@@ -2462,6 +2542,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 no_lint
 :
 -
@@ -2504,6 +2588,24 @@ cgi
 id
 =
 1809447
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_reviews
 :
 -
@@ -2578,6 +2680,24 @@ pull
 issuecomment
 -
 1377494482
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_sensitivity
 :
 -
@@ -2694,6 +2814,10 @@ send_in_pings
 metrics
 -
 baseline
+-
+dau
+-
+reporting
 no_lint
 :
 -
@@ -2720,6 +2844,24 @@ android
 issues
 /
 6229
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_reviews
 :
 -
@@ -2762,6 +2904,24 @@ android
 pull
 /
 7906
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925028
 data_sensitivity
 :
 -
