Bug 1923028 - Migrate scalars to use Glean APIs for downloads.*, r=chutten.
Depends on D225371

Differential Revision: https://phabricator.services.mozilla.com/D225372

UltraBlame original commit: 42af894496019453c6141ac2143929aea325e8a3

--- a/browser/components/downloads/metrics.yaml
+++ b/browser/components/downloads/metrics.yaml
@@ -119,142 +119,15 @@ tags
 :
 -
 '
-Toolkit
+Firefox
 :
 :
 Downloads
-API
+Panel
 '
 downloads
 :
-added_file_extension
-:
-type
-:
-event
-description
-:
->
-Sent
-when
-downloading
-a
-new
-file
-.
-This
-event
-was
-generated
-to
-correspond
-to
-the
-Legacy
-Telemetry
-event
-downloads
-.
-added
-#
-fileExtension
-.
-bugs
-:
--
-https
-:
-/
-/
-bugzil
-.
-la
-/
-1627676
--
-https
-:
-/
-/
-bugzil
-.
-la
-/
-1706355
-data_reviews
-:
--
-https
-:
-/
-/
-bugzil
-.
-la
-/
-1627676
--
-https
-:
-/
-/
-bugzil
-.
-la
-/
-1706355
-notification_emails
-:
--
-rtestard
-mozilla
-.
-com
--
-emalysz
-mozilla
-.
-com
-expires
-:
-never
-extra_keys
-:
-value
-:
-description
-:
->
-Possible
-values
-are
-in
-contained
-in
-DownloadList
-:
-:
-kFileExtensions
-.
-All
-other
-downloads
-not
-in
-the
-list
-are
-marked
-as
-other
-.
-type
-:
-string
-telemetry_mirror
-:
-Downloads_Added_Fileextension
-file_opened
+panel_shown
 :
 type
 :
@@ -268,13 +141,13 @@ of
 how
 many
 times
-files
-were
-opened
-from
 the
-download
+downloads
 panel
+was
+shown
+per
+session
 .
 This
 metric
@@ -289,7 +162,7 @@ Telemetry
 scalar
 downloads
 .
-file_opened
+panel_shown
 .
 bugs
 :
@@ -332,4 +205,4 @@ expires
 never
 telemetry_mirror
 :
-DOWNLOADS_FILE_OPENED
+DOWNLOADS_PANEL_SHOWN
