--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -85204,6 +85204,84 @@ true
 #
 When
 true
+HTTP
+/
+3
+will
+be
+disabled
+when
+third
+party
+roots
+are
+found
+.
+-
+name
+:
+network
+.
+http
+.
+http3
+.
+disable_when_third_party_roots_found
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
+Only
+used
+for
+testing
+purposes
+.
+In
+automation
+this
+value
+is
+used
+to
+override
+#
+the
+result
+of
+third
+party
+roots
+check
+.
+-
+name
+:
+network
+.
+http
+.
+http3
+.
+has_third_party_roots_found_in_automation
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
+When
+true
 a
 http
 request
