--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -4539,6 +4539,42 @@ well
 "
 [
 "
+test_http3_with_third_party_roots
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+"
+"
+socketprocess_networking
+"
+]
+run
+-
+sequentially
+=
+"
+node
+server
+exceptions
+dont
+replay
+well
+"
+[
+"
 test_httpResponseTimeout
 .
 js
