Bug 1910138 - Enable Accelerated Canvas2D on Windows. r=aosmond
Most issues related to the AC2D on Windows experiment should have been
addressed in related bugs, therefor it is time to starting rolling out
AC2D on Windows.

As before, this flips the gfx.canvas.accelerated pref to on, and also
flips the gfx.direct2d.disabled pref to true. With Direct2D disabled,
AC2D will then function. Direct2D can still be forced on via the
gfx.direct2d.force-enabled pref or by toggling the disabled pref, which
will subsequently automatically disable AC2D.

Differential Revision: https://phabricator.services.mozilla.com/D225685

UltraBlame original commit: fe10049200dfa92f958f65b9fc37fef345694b41

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -37025,6 +37025,15 @@ value
 :
 true
 #
+elif
+defined
+(
+XP_WIN
+)
+value
+:
+true
+#
 else
 value
 :
@@ -38896,7 +38905,7 @@ type
 bool
 value
 :
-false
+true
 mirror
 :
 once
