Bug 1924948 - Add scunnane to the list of Search reviewers. r=shtrom
Differential Revision: https://phabricator.services.mozilla.com/D225758

UltraBlame original commit: f272556e759490e4c0b47e1cec0dbd0612ea9756

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-05T13
+16T08
 :
-16
+28
 :
-08
+06
 .
-987429
+317673
 +
 00
 :
@@ -3297,6 +3297,19 @@ Clements
 nick
 :
 sclements
+-
+&
+scunnane
+bmo_id
+:
+703413
+name
+:
+Stephanie
+Cunnane
+nick
+:
+scunnane
 -
 &
 sefeng
@@ -15694,10 +15707,13 @@ peers
 daleharvey
 -
 *
+jteow
+-
+*
 mcheang
 -
 *
-jteow
+scunnane
 machine_name
 :
 search
@@ -19092,7 +19108,7 @@ hashes
 :
 config
 :
-2e733439b1df731727cf34f2a9b75005bef3ff00
+7217f00cccafd42ed649d638849425ed6356310e
 export
 :
-6f82081c80190cf2a4cea31ae3c0d3b1cbb0acf3
+3960a6fc6efb357302da10709df7d617a7660bd1
